# imagine

./: .gitignore  Cargo.toml  README.md  setup.py  ya.py
.cargo/: config.toml
.github/workflows/: CI.yml
examples/: driving.py  epicycles.py  flocking.py  lorenz_attractor.py  mandelbrot.py  rotating_cube.py
imagine/: camera.rs  color.rs  controller.rs  frame.rs  instance.rs  lib.rs  main_scene.rs  output.rs  renderer.rs  shader.rs  video.rs  world.rs
imagine.egg-info/: PKG-INFO  SOURCES.txt
imagine/animation/: keyframe.rs  mod.rs
imagine/components/: basic_shapes.rs  component.rs  mod.rs  model.rs  svg.rs
imagine/font/: font.rs  glyph.rs
imagine/loaders/: font.rs  mesh.rs  mod.rs  svg.rs
imagine/materials/: material.rs  mod.rs
imagine/math/: matrix.rs  mod.rs  vector.rs
imagine/objects/: basic_shapes.rs  ellipse.rs  mesh.rs  mod.rs  path.rs  polygon.rs  sprite.rs  text.rs
imagine/render/: context.rs  graph.rs  mod.rs  operation.rs  primitives.rs  resource.rs
imagine/resources/shaders/: default.vs  fill.comp  main3d.vs  phong.fs  stroke.comp
tests/: conftest.py  test_camera.py  test_color.py  test_frame.py  test_main_scene.py  test_output.py  test_path.py  test_world.py
