[package]
name = "imagine"
version = "0.1.0"
edition = "2018"

[lib]
path = "imagine/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
ffmpeg-sys-next = "6.0.1"
futures = "0.3.28"
futures-intrusive = "0.5.0"
lazy_static = "1.4.0"
nalgebra = "0.32.2"
png = "0.17.7"
pyo3 = { version = "0.18.1", features = ["extension-module"] }
shaderc = "0.8.2"
wgpu = { version = "0.17.0", features = ["spirv"] }
